# PortfolioPilot

./: .env.example  .eslintrc.cjs  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/web/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/live/: page.tsx
apps/web/app/risk/: page.tsx
apps/web/app/runs/: page.tsx
apps/web/components/: KpiCard.tsx  PageHeader.tsx  Panel.tsx  Sidebar.tsx  Topbar.tsx
apps/web/components/charts/: AreaChartCard.tsx  FrontierChartCard.tsx  (+3 more)
apps/web/lib/: analytics.ts  api.ts
data/runs/: db3d49d6-4ac0-455f-a7b1-35cbacbcfa84.json
docs/: API.md  ARCHITECTURE.md  MATH.md  MODEL_CARD.md  RELEASE_NOTES_v0.1.0.md
infra/: docker-compose.yml
scripts/: seed-runs.mjs
services/api/: .eslintrc.cjs  Dockerfile  package.json  tsconfig.json
services/api/prisma/: schema.prisma  schema.sqlite.prisma
services/api/src/: config.ts  index.ts  redis.ts  runs.ts
services/quant/: Dockerfile  pyproject.toml
services/quant/app/: config.py  main.py  models.py
services/quant/app/analytics/: __init__.py  factors.py  metrics.py  risk.py
services/quant/app/backtest/: __init__.py  engine.py  strategies.py
services/quant/app/data/: __init__.py  cache.py  factors.py  fred.py  market.py
services/quant/app/optimize/: __init__.py  cvar.py  mvo.py  risk_parity.py
services/quant/app/routers/: __init__.py  backtest.py  optimize.py  risk.py
services/quant/tests/: test_optimizers.py
(+10 files in other folders)
