[project]
name = "portfoliopilot-quant"
version = "0.1.0"
description = "Quant engine for PortfolioPilot."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "scipy>=1.13.1",
  "cvxpy>=1.5.2",
  "yfinance>=0.2.43",
  "pyarrow>=16.1.0",
  "statsmodels>=0.14.2",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.2", "ruff>=0.5.7", "black>=24.8.0"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100
